fix avatar height on mobile

--- a/src/user/header/Header.scss
+++ b/src/user/header/Header.scss
@@ -28,6 +28,7 @@
 			float: left;
 			margin-right: 1rem;
 			max-width: $smallAvatar;
+			max-height: $smallAvatar;
 		}
 
 		.avatar {
